@@ -1,4 +1,5 @@
 Sigil v0.1.3 <ADD DATE>
+    - fixed critical issue with Sigil hanging when loading certain SGF files (issue #87)
     - fixed rare issue with duplicate image loading (issue #86)
     - implemented a workaround for a webkit bug causing the first character of a heading
     created after a chapter break to be displayed incorrectly (issue #78)
